--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,6 @@
   <script type="text/javascript"
     src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-
   <!-- Importing icon cdn -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -57,6 +56,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- END -->
+
+
+  <script defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0JoV7YKa9kV63QHVz7XG2Ij1on6SLjB8&callback=initMap">
+    </script>
+  <!-- end -->
+
   <title>GiveMyRoom</title>
 </head>
 
